# ANIME-RECOMMENDER-SYSTEM-LLMOPS

./: .gitignore  Dockerfile  README.md  llmops-k8s.yaml  main.py  pyproject.toml  setup.py
chroma_db/: chroma.sqlite3
data/: anime_updated.csv
src/: data_loader.py  recommender.py  vector_store.py
utils/: logger.py
